--- a/index.html
+++ b/index.html
@@ -93,7 +93,95 @@
             </button>
           </div>
     </div>    
+    <div class="container categories">
+      <div class="row ">
+        <div class="col-md-4 ">
+          <div class="d-flex justify-content-between align-items-center cat1 ">
+            <h1>Watch</h1>
+          <img src="images/categories/watch.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="d-flex justify-content-between align-items-center cat2">
+            <h1>Bag</h1>
+          <img src="images/categories/bag.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="d-flex justify-content-between align-items-center cat3">
+            <h1>Shoes</h1>
+          <img src="images/categories/shoes.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <div class="container" id="shoes">
+      <h3>Shoes</h3>
+      <div class="card-group ">
+        <div class="card ">
+          <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
+            <button type="button" class="btn btn-primary">Buy Now</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <button type="button" class="btn btn-primary">Buy Now</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+            <button type="button" class="btn btn-primary">Buy Now</button>
+          </div>
+        </div>
+      </div>
+    <div class="container ">
+    </div>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col shadow-lg p-3 mb-5 bg-body rounded">
+        <div class="card h-100">
+          <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <button type="button" class="btn btn-primary">Buy Now</button>
+
+          </div>
+        </div>
+      </div>
+      <div class="col shadow-lg p-3 mb-5 bg-body rounded">
+        <div class="card h-100">
+          <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a short card.</p>
+            <button type="button" class="btn btn-primary">Buy Now</button>
+
+          </div>
+        </div>
+      </div>
+      <div class="col shadow-lg p-3 mb-5 bg-body rounded">
+        <div class="card h-100">
+          <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            <button type="button" class="btn btn-primary">Buy Now</button>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
 
 
     <!-- Javascript code -->
